--- a/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
@@ -776,9 +776,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce4fbbcf-6a5c-4412-bd05-99a55123497f",
+   "metadata": {},
+   "source": [
+    "#### <br>\n",
+    "## Prompt Chaining (프롬프트 연쇄)\n",
+    ": 복잡한 문제를 해결하기 위해 여러 단계를 거쳐 연속적으로 프롬프트를 작성하는 방법\n",
+    "https://devocean.sk.com/blog/techBoardDetail.do?ID=166026&boardType=techBlog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "id": "49533616-a380-42a2-9905-a178f8997e4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "[1단계] : 제품 아이디어 구체화\n",
+      "제품 아이디어: 스마트 홈 보안 시스템\n",
+      "제품 요약: 스마트 홈 보안 시스템은 현대 주거 환경에서 중요한 요소로 자리 잡고 있으며, 여러 핵심 기능이 사용자에게 다양한 가치를 제공합니다. 주요 기능과 그 기능이 제공하는 가치는 다음과 같습니다.\n",
+      "\n",
+      "### 1. **실시간 모니터링**\n",
+      "   - **설명**: 카메라 및 센서를 통해 집 안팎을 실시간으로 모니터링할 수 있습니다.\n",
+      "   - **가치 제공**: 사용자는 외부에서 집을 지키고 있다는 느낌을 받을 수 있으며, 예기치 않은 상황에 즉시 대응할 수 있습니다.\n",
+      "\n",
+      "### 2. **위험 탐지**\n",
+      "   - **설명**: 움직임 감지 센서,\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "[2단계] : 고객 요구사항 분석\n",
+      "제품 요약: 스마트 홈 보안 시스템은 현대 주거 환경에서 중요한 요소로 자리 잡고 있으며, 여러 핵심 기능이 사용자에게 다양한 가치를 제공합니다. 주요 기능과 그 기능이 제공하는 가치는 다음과 같습니다.\n",
+      "\n",
+      "### 1. **실시간 모니터링**\n",
+      "   - **설명**: 카메라 및 센서를 통해 집 안팎을 실시간으로 모니터링할 수 있습니다.\n",
+      "   - **가치 제공**: 사용자는 외부에서 집을 지키고 있다는 느낌을 받을 수 있으며, 예기치 않은 상황에 즉시 대응할 수 있습니다.\n",
+      "\n",
+      "### 2. **위험 탐지**\n",
+      "   - **설명**: 움직임 감지 센서,\n",
+      "\n",
+      "고객 요구사항 분석:\n",
+      "스마트 홈 보안 시스템의 주요 타겟 고객은 다음과 같으며, 이 고객들의 요구 사항과 관련된 문제 및 기대되는 기능은 다음과 같습니다.\n",
+      "\n",
+      "### 주요 타겟 고객\n",
+      "\n",
+      "1. **도시에서 거주하는 고소득층 가구**\n",
+      "   - 이들은 보안에 대한 높은 관심이 있으며, 고가의 자산을 보호하고자 하는 필요가 있습니다.\n",
+      "\n",
+      "2. **대가족 또는 자녀가 있는 가구**\n",
+      "   - 자녀의 안전을 중요시 여기는 부모들이며, 자녀가 집에 혼자 있을 때의 불안을 해소하고자 합니다.\n",
+      "\n",
+      "3. **은퇴자 및 고령자**\n",
+      "   - 독립적으로 살\n",
+      "\n",
+      "--------------------------------------------------\n",
+      "[3단계] : 성공적인 출시 전략\n",
+      "고객 요구사항 분석:\n",
+      "스마트 홈 보안 시스템의 주요 타겟 고객은 다음과 같으며, 이 고객들의 요구 사항과 관련된 문제 및 기대되는 기능은 다음과 같습니다.\n",
+      "\n",
+      "### 주요 타겟 고객\n",
+      "\n",
+      "1. **도시에서 거주하는 고소득층 가구**\n",
+      "   - 이들은 보안에 대한 높은 관심이 있으며, 고가의 자산을 보호하고자 하는 필요가 있습니다.\n",
+      "\n",
+      "2. **대가족 또는 자녀가 있는 가구**\n",
+      "   - 자녀의 안전을 중요시 여기는 부모들이며, 자녀가 집에 혼자 있을 때의 불안을 해소하고자 합니다.\n",
+      "\n",
+      "3. **은퇴자 및 고령자**\n",
+      "   - 독립적으로 살\n",
+      "\n",
+      "출시 전략:\n",
+      "스마트 홈 보안 시스템을 출시하기 위한 전략을 아래와 같이 제안합니다. 각 타겟 고객층에 대한 마케팅 전략과 고객 피드백을 반영하는 방법을 포함하였습니다.\n",
+      "\n",
+      "### 1. 도시에서 거주하는 고소득층 가구\n",
+      "\n",
+      "#### 마케팅 전략\n",
+      "- **프리미엄 제품 포지셔닝**: 높은 품질과 성능을 강조하여 고소득층에 어필합니다. 디자인과 사용자 인터페이스를 고급스럽게 설계하여 고급스러운 이미지 구축을 목표로 합니다.\n",
+      "- **B2B 제휴**: 고급 부동산 개발업체와 협력하여 신규 아파트와 주택에\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ask_openai(prompt, max_tokens=150):\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        max_tokens=max_tokens,\n",
+    "        messages=[\n",
+    "                {\"role\": \"user\", \n",
+    "                 \"content\": prompt}\n",
+    "                ]\n",
+    "    )\n",
+    "    return response.choices[0].message.content\n",
+    "\n",
+    "# 제품 개발 체이닝\n",
+    "def product_development_chain():\n",
+    "    \n",
+    "    # 1단계 : 제품 아이디어 구체화\n",
+    "    product_idea = \"스마트 홈 보안 시스템\"\n",
+    "    prompt_1 = f\"{product_idea}의 핵심 기능과 그 기능들이 어떻게 사용자에게 가치를 제공할 수 있는지 설명해줘. 이 제품이 기존 시장에서 어떤 문제를 해결하는지에 대해 강조해줘.\"\n",
+    "    product_summary = ask_openai(prompt_1)\n",
+    "    print('-'*50)\n",
+    "    print('[1단계] : 제품 아이디어 구체화')\n",
+    "    print(f\"제품 아이디어: {product_idea }\\n제품 요약: {product_summary}\\n\")\n",
+    "\n",
+    "    # 2단계 : 고객 요구사항 분석\n",
+    "    prompt_2 = f\"{product_summary}을 바탕으로, 이 제품의 주요 타겟 고객이 어떤 요구사항을 가지고 있는지 분석해줘. 이 고객들이 제품을 사용하면서 겪을 수 있는 주요 문제와 기대되는 기능을 설명해줘.\"\n",
+    "    customer_requirements = ask_openai(prompt_2)\n",
+    "    print('-'*50)\n",
+    "    print('[2단계] : 고객 요구사항 분석')\n",
+    "    print(f\"제품 요약: {product_summary}\\n\\n고객 요구사항 분석:\\n{customer_requirements}\\n\")\n",
+    "\n",
+    "    # 3단계 : 성공적인 출시 전략\n",
+    "    prompt_3 = f\"{customer_requirements}을 기반으로, 이 제품을 성공적으로 출시하기 위한 전략을 제안해줘. 특히, 마케팅 전략과 고객 피드백을 반영하는 방법에 대해 자세히 설명해줘.\"\n",
+    "    launch_strategy = ask_openai(prompt_3)\n",
+    "    print('-'*50)\n",
+    "    print('[3단계] : 성공적인 출시 전략')\n",
+    "    print(f\"고객 요구사항 분석:\\n{customer_requirements}\\n\\n출시 전략:\\n{launch_strategy}\\n\")\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    product_development_chain() "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33435347-4e9d-40bf-9895-82593362f1e9",
+   "id": "6f663df0-bc83-4d44-990b-be04521dbfb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b765a6-c61d-4f4f-8606-1aed2979fc23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f067eecd-e9cf-4959-a2e6-45684124d121",
    "metadata": {},
    "outputs": [],
    "source": []
