--- a/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
@@ -903,12 +903,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f663df0-bc83-4d44-990b-be04521dbfb8",
+   "cell_type": "markdown",
+   "id": "abbe5176-d36f-4375-9dd3-c1581ff535a3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Tree of Thoughts (ToT)\n",
+    ": **Tree of Thoughts (ToT)**는 대규모 언어 모델(LLM)이 복잡한 문제를 해결하기 위해 다양한 아이디어를 생성하고 평가하는 과정을 시뮬레이션하는 새로운 방법입니다. 마치 사람이 문제에 대한 해결책을 찾기 위해 마음속으로 여러 가지 가능성을 떠올리고 그중 가장 적절한 것을 선택하는 것과 유사합니다. <br>\n",
+    "### ToT가 작동하는 방식\n",
+    "생각의 나무(Tree of Thoughts): 문제를 해결하기 위한 다양한 아이디어와 접근 방식을 가지(branches)로 확장시키는 나무 구조로 표현합니다. 각 가지는 다양한 사고의 흐름을 나타냅니다.\n",
+    "\n",
+    "탐색 과정: 나무의 뿌리(root)에서 시작하여 각 가지를 따라가며 가능한 해결 방법들을 평가하고, 최적의 해결책을 찾는 과정을 탐색이라고 합니다. 이 과정에서 여러 가지 경로를 비교하고, 실패하거나 비효율적인 경로는 가지치기(pruning)하여 제거합니다.\n",
+    "\n",
+    "분기와 평가: 문제를 해결하는 다양한 경로를 탐색하는 중간 중간에 각 경로가 얼마나 유망한지 평가하고, 유망한 경로를 더 깊이 탐색하며 문제 해결에 접근합니다.]\n",
+    "\n",
+    "![image](https://www.promptingguide.ai/_next/image?url=%2F_next%2Fstatic%2Fmedia%2FTOT.3b13bc5e.png&w=1200&q=75)"
+   ]
   },
   {
    "cell_type": "code",
