--- a/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
@@ -921,16 +921,255 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e7b765a6-c61d-4f4f-8606-1aed2979fc23",
+   "execution_count": 283,
+   "id": "f067eecd-e9cf-4959-a2e6-45684124d121",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial thoughts:\n",
+      "['자연을 보존하기 위한 창의적인 아이디어는 다양합니다. 다음은 몇 가지 제안입니다:\\n\\n1. **도시 농업과 수직 정원**: 도시 지역에서 농업을 장려하고, 건물의 벽면을 활용하여 수직 정원을 조성함으로써 녹지를 증가시키고 식물의 생태계를 지원할 수 있습니다.\\n\\n2. **재활용 아트 프로젝트**: 폐기물이나 재활', '자연을 보존하기 위한 창의적인 아이디어는 다양합니다. 아래 몇 가지 제안을 소개합니다:\\n\\n1. **도시 녹화 프로젝트**: 도시 내 공원과 녹지 공간을 확장하고, 건물 옥상과 발코니에 식물을 심는 프로그램을 운영하여 도시의 공기 질을 개선하고 생물 다양성을 증진합니다.\\n\\n2. **재활용 아트**: 폐기물과 재활용', '자연을 보존하기 위한 창의적인 아이디어는 다양하게 있을 수 있습니다. 몇 가지를 제안해 드리겠습니다.\\n\\n1. **커뮤니티 정원 만들기**: 지역 주민들이 함께 참여하는 커뮤니티 정원을 만들어 생태계를 보호하고 도시의 녹지를 늘릴 수 있습니다. 유기농 작물 재배와 생태 다양성을 촉진하는 공간으로 활용할 수 있습니다.\\n\\n2. **제로 웨이스트 캠']\n",
+      "\n",
+      "Exploring thought 1: 자연을 보존하기 위한 창의적인 아이디어는 다양합니다. 다음은 몇 가지 제안입니다:\n",
+      "\n",
+      "1. **도시 농업과 수직 정원**: 도시 지역에서 농업을 장려하고, 건물의 벽면을 활용하여 수직 정원을 조성함으로써 녹지를 증가시키고 식물의 생태계를 지원할 수 있습니다.\n",
+      "\n",
+      "2. **재활용 아트 프로젝트**: 폐기물이나 재활\n",
+      "Deeper thought: 재활용 아트 프로젝트는 자연을 보존하는 창의적인 방식 중 하나로, 쓰레기를 예술작품으로 변환하여 재사용의 중요성을 알리는 좋은 방법입니다. 다음은 이러한 프로젝트를 발전시키기 위한 몇 가지 아이디어입니다:\n",
+      "\n",
+      "1. **공공 미술 전시회**: 지역 사회와 협력하여 재활용된 재료로 만든 아트 작품을 전시하는 이벤트를 개최합니다. 이를 통해 지역 주민들에게\n",
+      "\n",
+      "Exploring thought 2: 자연을 보존하기 위한 창의적인 아이디어는 다양합니다. 아래 몇 가지 제안을 소개합니다:\n",
+      "\n",
+      "1. **도시 녹화 프로젝트**: 도시 내 공원과 녹지 공간을 확장하고, 건물 옥상과 발코니에 식물을 심는 프로그램을 운영하여 도시의 공기 질을 개선하고 생물 다양성을 증진합니다.\n",
+      "\n",
+      "2. **재활용 아트**: 폐기물과 재활용\n",
+      "Deeper thought: 재활용 아트를 통해 폐기물 문제를 창의적으로 해결할 수 있는 아이디어는 다음과 같습니다:\n",
+      "\n",
+      "1. **공공 미술 프로젝트**: 지역 사회와 협력하여 버려진 물건이나 재활용 가능한 자재를 이용해 공공 미술 작품을 만들고, 이를 통해 재활용의 중요성을 알리고 사람들의 참여를 유도합니다.\n",
+      "\n",
+      "2. **업사이클링 워크숍**: 지역 주민들이\n",
+      "\n",
+      "Exploring thought 3: 자연을 보존하기 위한 창의적인 아이디어는 다양하게 있을 수 있습니다. 몇 가지를 제안해 드리겠습니다.\n",
+      "\n",
+      "1. **커뮤니티 정원 만들기**: 지역 주민들이 함께 참여하는 커뮤니티 정원을 만들어 생태계를 보호하고 도시의 녹지를 늘릴 수 있습니다. 유기농 작물 재배와 생태 다양성을 촉진하는 공간으로 활용할 수 있습니다.\n",
+      "\n",
+      "2. **제로 웨이스트 캠\n",
+      "Deeper thought: 제로 웨이스트 캠페인을 운영한 후에도 지속 가능한 환경을 위해 할 수 있는 일들이 많습니다. 몇 가지 제안드리겠습니다.\n",
+      "\n",
+      "1. **교육 프로그램 개발**: 지역 사회와 학교를 대상으로 제로 웨이스트의 중요성과 실천 방법에 대한 교육 프로그램을 개발하고 진행할 수 있습니다. 워크숍이나 세미나를 통해 주민들이 스스로 실천할 수 있는 구체적인 방법을 배울 수 있도록 도\n",
+      "\n",
+      "Best thought: 제로 웨이스트 캠페인을 운영한 후에도 지속 가능한 환경을 위해 할 수 있는 일들이 많습니다. 몇 가지 제안드리겠습니다.\n",
+      "\n",
+      "1. **교육 프로그램 개발**: 지역 사회와 학교를 대상으로 제로 웨이스트의 중요성과 실천 방법에 대한 교육 프로그램을 개발하고 진행할 수 있습니다. 워크숍이나 세미나를 통해 주민들이 스스로 실천할 수 있는 구체적인 방법을 배울 수 있도록 도\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_thoughts(prompt, n=3):\n",
+    "    \"\"\"\n",
+    "    GPT를 사용하여 주어진 프롬프트에 대해 여러 가지 생각(아이디어)을 생성하는 함수.\n",
+    "    \"\"\"\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "            {\"role\": \"user\", \"content\": prompt}\n",
+    "        ],\n",
+    "        n=n,  # 생성할 생각(아이디어)의 수\n",
+    "        max_tokens=100  # 각 응답의 최대 길이\n",
+    "    )\n",
+    "    thoughts =  [choice.message.content for choice in response.choices]\n",
+    "    return thoughts\n",
+    "\n",
+    "# 함수는 초기 생각들을 생성한 후, 각 생각에 대해 더 깊이 탐색하는 과정을 거칩니다.\n",
+    "# 더 깊이 탐색한 결과 중 길이가 가장 긴 응답을 최적의 생각으로 선택\n",
+    "def tree_of_thoughts(prompt, depth=2):\n",
+    "    \"\"\"\n",
+    "    Tree of Thoughts 방식을 사용하여 최적의 생각을 찾는 함수.\n",
+    "    \"\"\"\n",
+    "    initial_thoughts = generate_thoughts(prompt)\n",
+    "    print(f\"Initial thoughts:\\n{initial_thoughts}\\n\")\n",
+    "\n",
+    "    best_thought = None\n",
+    "    for i, thought in enumerate(initial_thoughts):\n",
+    "        print(f\"Exploring thought {i + 1}: {thought}\")\n",
+    "        next_prompt = f\"{thought} 다음에 어떻게 할 수 있을까요?\"\n",
+    "        deeper_thoughts = generate_thoughts(next_prompt)\n",
+    "\n",
+    "        # 간단한 평가 방법: 길이가 가장 긴 응답을 최선으로 선택\n",
+    "        best_deeper_thought = max(deeper_thoughts, key=len)\n",
+    "        print(f\"Deeper thought: {best_deeper_thought}\\n\")\n",
+    "\n",
+    "        # 최적의 생각 갱신\n",
+    "        if not best_thought or len(best_deeper_thought) > len(best_thought):\n",
+    "            best_thought = best_deeper_thought\n",
+    "\n",
+    "    print(f\"Best thought: {best_thought}\")\n",
+    "\n",
+    "# 사용 예제\n",
+    "user_prompt = \"자연을 보존하기 위한 창의적인 아이디어가 무엇일까요?\"\n",
+    "tree_of_thoughts(user_prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "009b0a9b-cce1-483e-a786-88ef640c179f",
+   "metadata": {},
+   "source": [
+    "#### <br>\n",
+    "## Retrieval Augmented Generation (RAG)\n",
+    "RAG의 기본 개념:\n",
+    "Retrieval (검색): 먼저, 특정 질문이나 문장에 대해 관련성이 높은 문서나 정보를 대규모 데이터베이스에서 검색합니다. 이 단계는 전통적인 정보 검색 시스템이나 특수한 인코더 모델(BERT와 같은 트랜스포머 기반 모델)을 사용하여 수행됩니다. 검색된 문서들은 후속 생성 과정의 입력으로 사용됩니다.\n",
+    "\n",
+    "Augmentation (증강): 검색된 문서나 정보를 사용하여 입력된 질문이나 문장을 보강합니다. 즉, 검색된 관련 정보가 모델의 입력으로 주어지며, 이는 생성 모델이 더 나은 텍스트를 생성할 수 있도록 도와줍니다.\n",
+    "\n",
+    "Generation (생성): 마지막으로, 검색된 정보를 바탕으로 주어진 질문에 대한 답변이나 설명을 생성합니다. 이 단계에서 GPT 생성 모델이 사용될 수 있으며, 검색된 정보가 포함되어 보다 정확하고 풍부한 응답을 생성할 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "id": "c5fffa4a-4bfd-4617-8804-933fa399cfb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['RAG는 정보 검색과 텍스트 생성을 결합하여 더 나은 결과를 제공합니다.']\n",
+      "질문: RAG\n",
+      "답변: RAG( Retrieval-Augmented Generation)는 정보 검색과 텍스트 생성을 통합한 접근 방식으로, 사용자가 제시한 질문이나 요청에 대해 보다 정확하고 풍부한 답변을 제공하는 데 도움을 줍니다. 이 방법은 먼저 관련 정보를 검색한 후, 그 정보를 바탕으로 자연어 텍스트를 생성하여 최종 결과를 도출합니다. 이렇게 함으로써 RAG는 기존의 텍스트 생성 모델보다 더 신뢰\n"
+     ]
+    }
+   ],
+   "source": [
+    "def search_documents(query):\n",
+    "    # 이 함수는 문서를 검색하는 역할을 합니다.\n",
+    "    # 실제로는 외부 검색 엔진이나 데이터베이스에 쿼리를 보내야 하지만,\n",
+    "    # 이 예제에서는 간단히 미리 정의된 문서를 반환합니다.\n",
+    "    \n",
+    "    # 예제 문서\n",
+    "    documents = [\n",
+    "        \"OpenAI는 인공지능 연구소로, 다양한 AI 기술을 개발합니다.\",\n",
+    "        \"GPT-4는 OpenAI에서 개발한 언어 모델로, 자연어 처리를 위한 강력한 도구입니다.\",\n",
+    "        \"RAG는 정보 검색과 텍스트 생성을 결합하여 더 나은 결과를 제공합니다.\"\n",
+    "    ]\n",
+    "    \n",
+    "    # 간단한 검색 논리: 입력 쿼리와 관련된 문서 필터링\n",
+    "    relevant_docs = [doc for doc in documents if query.lower() in doc.lower()]\n",
+    "    \n",
+    "    return relevant_docs\n",
+    "\n",
+    "def generate_answer(query, documents):\n",
+    "    # 검색된 문서를 바탕으로 답변 생성\n",
+    "    combined_context = \"\\n\".join(documents)\n",
+    "    prompt = f\"질문: {query}\\n\\n문서:\\n{combined_context}\\n\\n답변:\"\n",
+    "    \n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        messages=[\n",
+    "                {\"role\": \"user\", \n",
+    "                 \"content\": prompt}\n",
+    "                ],\n",
+    "        max_tokens=100,\n",
+    "        temperature=0.5\n",
+    "    )\n",
+    "    \n",
+    "    return response.choices[0].message.content\n",
+    "\n",
+    "# query = \"OpenAI\"\n",
+    "# query = \"GPT-4\"\n",
+    "query = \"RAG\"\n",
+    "\n",
+    "# 1. 문서 검색\n",
+    "documents = search_documents(query)\n",
+    "print(documents)\n",
+    "\n",
+    "# 2. 답변 생성\n",
+    "answer = generate_answer(query, documents)\n",
+    "\n",
+    "print(\"질문:\", query)\n",
+    "print(\"답변:\", answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "id": "72389e4e-8211-469a-9270-f0f2e33ad146",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"스불재\"는 '스스로 불러온 재앙'을 줄인 말로, 자신이 만든 문제로 곤란한 상황에 처했을 때 사용하는 표현입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문서 사전 참조 : 환각 현상 방지\n",
+    "system_role = \"\"\"\n",
+    "신조어 사전:\n",
+    "{\"스불재\": \"스스로 불러온 재앙의 줄임말로, 자신이 만든 문제로 곤란한 상황에 처했을 때 사용\"\n",
+    "\"억까\": \"억지로 까기의 줄임말로, 근거 없이 비판하거나 비난하는 상황을 말함\"\n",
+    "\"존맛탱\": \"존맛과 탱의 합성어로, 매우 맛있는 음식을 뜻함\"\n",
+    "\"어쩔티비\": \"상대방의 말을 무시하거나 별다른 대응을 하지 않겠다는 의미로, 주로 장난스럽게 사용된다\"\n",
+    "\"복세편살\": \"복잡한 세상 편하게 살자의 줄임말로, 복잡한 인생을 간단하게 살자는 의미\"\n",
+    "\"알잘딱깔센\":\"알아서 잘, 딱, 깔끔하고 센스 있게의 줄임말로, 어떤 일을 척척 잘 해내는 사람을 칭찬할 때 쓰임\"}\n",
+    "\n",
+    "이 신조어 사전을 참조하여 답변하세요. 만일 이 신조어 사전에 없으면 \"모르는 단어입니다\"라고 답하세요.\"\n",
+    "\"\"\"\n",
+    "# \"점메추\": \"점심 메뉴 추천의 줄임말로, 점심에 무엇을 먹을지 고민할 때 사용\"\n",
+    "# \"킹받다\": \"열받다의 변형 표현으로, 아주 화가 나거나 짜증이 날 때 사용\"\n",
+    "# \"갓생\": \"신처럼 성실하고 부지런하게 사는 삶을 의미하며, 목표를 향해 최선을 다하는 삶을 칭찬할 때 사용\"\n",
+    "\n",
+    "prompt = \"신조어 {신조어}의 뜻을 말해주세요.\".format(신조어=\"스불재\")\n",
+    "context = [{\"role\": \"system\", \"content\": system_role},\n",
+    "           {\"role\": \"user\", \"content\": prompt}] \n",
+    "response = client.chat.completions.create(\n",
+    "            # model=\"gpt-4o-mini\", \n",
+    "            model=\"gpt-3.5-turbo\",\n",
+    "            messages=context,\n",
+    "            temperature=0,\n",
+    "            top_p=0\n",
+    "        )\n",
+    "print(response.choices[0].message.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "id": "2c80a38d-7271-4130-99f1-81f095d3bc87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"어쩔티비\"는 \"어쩔 수 없는 TV\"의 줄임말로, 어떤 상황이나 일에 대해 어쩔 수 없는 상태에서 TV를 보는 것을 뜻합니다. 이는 주로 힘들거나 지루한 상황에서 TV를 보며 스트레스를 해소하는 의미로 사용됩니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = \"신조어 {신조어}의 뜻을 말해주세요.\".format(신조어=\"어쩔티비\")\n",
+    "context = [{\"role\": \"user\", \"content\": prompt}] \n",
+    "response = client.chat.completions.create(\n",
+    "            # model=\"gpt-4o-mini\", \n",
+    "            model=\"gpt-3.5-turbo\",\n",
+    "            messages=context,\n",
+    "            temperature=0,\n",
+    "            top_p=0\n",
+    "        )\n",
+    "print(response.choices[0].message.content)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f067eecd-e9cf-4959-a2e6-45684124d121",
+   "id": "35d53f46-b6c1-4cd7-b083-83dea8d37a1e",
    "metadata": {},
    "outputs": [],
    "source": []
