--- a/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/03_프롬프트엔지니어링 기법.ipynb
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "id": "2c80a38d-7271-4130-99f1-81f095d3bc87",
    "metadata": {},
    "outputs": [
@@ -1187,12 +1187,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"어쩔티비\"는 \"어쩔 수 없는 TV\"의 줄임말로, 어떤 상황이나 일에 대해 어쩔 수 없는 상태에서 TV를 보는 것을 뜻합니다. 이는 주로 힘들거나 지루한 상황에서 TV를 보며 스트레스를 해소하는 의미로 사용됩니다.\n"
+      "\"스불재\"는 \"스벅에서 불러주는 재료\"를 줄인 말로, 스타벅스에서 주문 시 사용되는 용어나 단어를 의미합니다. 이는 스타벅스에서 일하는 직원들이 자주 사용하는 용어들을 일반 손님들이 이해하기 쉽게 풀어서 설명한 것을 가리키는 신조어입니다.\n"
      ]
     }
    ],
    "source": [
-    "prompt = \"신조어 {신조어}의 뜻을 말해주세요.\".format(신조어=\"어쩔티비\")\n",
+    "prompt = \"신조어 {신조어}의 뜻을 말해주세요.\".format(신조어=\"스불재\")\n",
     "context = [{\"role\": \"user\", \"content\": prompt}] \n",
     "response = client.chat.completions.create(\n",
     "            # model=\"gpt-4o-mini\", \n",
