--- a/02_OpenAI API 사용 챗봇 개발/OpenAI API 사용 RAG.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/OpenAI API 사용 RAG.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "290e3c5d-228c-40a7-a1fa-6266e7abcc11",
    "metadata": {},
    "outputs": [],
@@ -50,6 +50,25 @@
     "    \"GPT는 자연어 처리를 위한 강력한 AI 모델입니다.\",\n",
     "    \"RAG는 검색 기반 생성 기법을 활용하여 AI 응답을 향상시키는 방법입니다.\"    \n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "682fac4d-736e-4e39-acfe-43c72ad5b5bd",
+   "metadata": {},
+   "source": [
+    "# 워드 임베딩 : 가중치(Weight)를 생성\n",
+    "# Tokenizer : 숫자로 인코딩하고 패딩 처리\n",
+    "\n",
+    "* max length : 문장의 최대 길이  --> 20\n",
+    "텍스트 데이터를 고차원 벡터 공간으로 매핑하는 작업  : 10\n",
+    "[10 201 45 678 22 33 665 657 345 99 0 0 0 0 0 0 0 0 0 0]\n",
+    "\n",
+    "파일의 내용 불러오기 :6\n",
+    "[44 5 5 677 888 110 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+    "\n",
+    "안녕~  : 3\n",
+    "[23 43 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]"
    ]
   },
   {
@@ -89,7 +108,7 @@
     "\n",
     "# FAISS 벡터 인덱스 생성\n",
     "dimension = document_embeddings.shape[1]\n",
-    "print(dimension)\n",
+    "print(dimension)  # 1536\n",
     "index = faiss.IndexFlatL2(dimension)\n",
     "index.add(document_embeddings)"
    ]
