--- a/02_OpenAI API 사용 챗봇 개발/app.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/app.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "a99d23ad-dc7a-4c98-bec8-245e07d0080b",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "471a7842-3d63-482e-9fb0-3ba978ee7568",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,9 @@
       "127.0.0.1 - - [11/Feb/2025 15:24:38] \"GET / HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [11/Feb/2025 15:24:46] \"POST /get_response HTTP/1.1\" 200 -\n",
       "127.0.0.1 - - [11/Feb/2025 15:26:40] \"POST /get_response HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [11/Feb/2025 15:27:28] \"POST /get_response HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [11/Feb/2025 15:27:28] \"POST /get_response HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Feb/2025 15:29:45] \"POST /get_response HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [11/Feb/2025 15:45:13] \"POST /get_response HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -159,17 +161,214 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "012bf579-958c-42fa-8a05-98eb2f4c2ad0",
+   "cell_type": "markdown",
+   "id": "a822ca33-eafc-43f2-8d43-b896bba56988",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 질문한 내용을 Context로 계속 유지하면서 질문하기"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "eebaf859-9467-467d-b4d5-4459414ec44f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [11/Feb/2025 15:59:12] \"GET / HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 15:59:32] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 15:59:51] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:00:41] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}, {'role': 'user', 'content': '어두운이유?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:01:08] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}, {'role': 'user', 'content': '어두운이유?'}, {'role': 'user', 'content': 'hello?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:01:48] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}, {'role': 'user', 'content': '어두운이유?'}, {'role': 'user', 'content': 'hello?'}, {'role': 'user', 'content': '노란 이유는?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:02:18] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}, {'role': 'user', 'content': '어두운이유?'}, {'role': 'user', 'content': 'hello?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '하늘이 파란이유는? hello?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:02:54] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}, {'role': 'user', 'content': '어두운이유?'}, {'role': 'user', 'content': 'hello?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '하늘이 파란이유는? hello?'}, {'role': 'user', 'content': 'hello?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:03:25] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}, {'role': 'user', 'content': '어두운이유?'}, {'role': 'user', 'content': 'hello?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '하늘이 파란이유는? hello?'}, {'role': 'user', 'content': 'hello?'}, {'role': 'user', 'content': '철수에게는 사과가 10개 있었습니다 그저께 부터 오늘까지 매일 아침에 2개씩 먹었습니다 오늘 점심에 어머니께서 사과 5개를 더 사다 주셨습니다 오늘 저녁에 친구에게 2개를 주었습니다 철수는 총 몇 개의 사과를 가지고 있을까요?'}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:10:36] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'role': 'user', 'content': '하늘이 파란 이유는?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '빨간경우는?'}, {'role': 'user', 'content': '어두운이유?'}, {'role': 'user', 'content': 'hello?'}, {'role': 'user', 'content': '노란 이유는?'}, {'role': 'user', 'content': '하늘이 파란이유는? hello?'}, {'role': 'user', 'content': 'hello?'}, {'role': 'user', 'content': '철수에게는 사과가 10개 있었습니다 그저께 부터 오늘까지 매일 아침에 2개씩 먹었습니다 오늘 점심에 어머니께서 사과 5개를 더 사다 주셨습니다 오늘 저녁에 친구에게 2개를 주었습니다 철수는 총 몇 개의 사과를 가지고 있을까요?'}, {'role': 'user', 'content': \"4명의 생존자가 강을 건너야 합니다. 각 생존자가 강을 건너는 데 걸리는 시간은 각각 다릅니다: 3분, 4분, 7분, 12분. 이들은 한 번에 최대 두 명씩만 함께 배를 타고 강을 건널 수 있으며, 배에는 반드시 등불을 지참해야 합니다.  그러나 등불은 하나뿐이어서, 생존자들이 강을 건널 때마다 등불을 반드시 함께 가져가야 합니다.  모든 생존자가 가장 효율적으로 강을 건너려면 어떻게 해야 할까요?  마지막으로 총 소요 시간을 '정답: <정답>분' 형식으로 답변하세요.\"}]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [11/Feb/2025 16:11:05] \"POST /get_response HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 소스 코드를 이어서 실행할 경우 오류나므로 \"Restart Kernel\"을 수행하고 실행한다\n",
+    "@app.route(\"/\")\n",
+    "def home():\n",
+    "    return render_template(\"index.html\")\n",
+    "\n",
+    "# 대화 히스토리를 저장할 변수\n",
+    "conversation_history = []\n",
+    "\n",
+    "@app.route(\"/get_response\", methods=[\"POST\"])\n",
+    "def get_response():\n",
+    "    user_message = request.json.get(\"message\")\n",
+    "    conversation_history.append({\"role\": \"user\", \"content\": user_message})\n",
+    "    print(conversation_history)\n",
+    "                                \n",
+    "    # OpenAI 모델에 요청\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"gpt-4o-mini\",\n",
+    "        messages=conversation_history,\n",
+    "        # max_tokens=300,\n",
+    "        n=1,\n",
+    "        stop=None,\n",
+    "        temperature=0.2,\n",
+    "    )\n",
+    "\n",
+    "    bot_response = response.choices[0].message.content\n",
+    "    return jsonify({\"response\": bot_response})\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    app.run(debug=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dd4dfe2-6db7-4491-baa9-0bca685ca43c",
    "metadata": {},
    "outputs": [],
    "source": []
