--- a/02_OpenAI API 사용 챗봇 개발/04_SQLite3_sample.ipynb
+++ b/02_OpenAI API 사용 챗봇 개발/04_SQLite3_sample.ipynb
@@ -202,7 +202,7 @@
     "    conn.close()  \n",
     "\n",
     "# 불러오기\n",
-    "def get_conversation():\n",
+    "def get_conversations():\n",
     "    conn = sqlite3.connect('sample.db')\n",
     "    c = conn.cursor()\n",
     "    c.execute('SELECT * FROM conversations')\n",
@@ -233,7 +233,7 @@
     "    save_conversation('Hello','Hello! How can I assist you today?')\n",
     "    # delete_conversation(id_key=1)\n",
     "    # delete_conversation(question='Hello')    \n",
-    "    print(get_conversation())"
+    "    print(get_conversations())"
    ]
   },
   {
